--- a/index.html
+++ b/index.html
@@ -1077,5 +1077,114 @@
     </div>
 
     <!-- Content Section Ends here -->
+
+    <!-- Footer Starts here -->
+    <footer
+      class="fixed w-full bottom-0 z-20 bg-white py-3 px-4 flex justify-between items-center"
+    >
+      <div class="w-2/3">
+        <div class="flex items-center max-w-4xl">
+          <!-- Step 1 -->
+          <a
+            href="#"
+            class="flex flex-row active items-center gap-x-1.5 cursor-pointer"
+            data-step="1"
+          >
+            <div
+              class="rounded-full bg-primary-color h-6 w-6 flex items-center justify-center text-white"
+            >
+              <p class="text-sm">1</p>
+            </div>
+            <p class="text-sm text-grey-two hidden xl:block">Search for Cars</p>
+          </a>
+
+          <!-- Connector Line -->
+          <div class="h-0.5 bg-grey-seven flex-1 mx-2"></div>
+          <!-- Step 2 -->
+          <a
+            href="#"
+            class="flex flex-row items-center gap-x-1.5 cursor-pointer"
+            data-step="2"
+          >
+            <div
+              class="rounded-full border border-grey-six h-6 w-6 flex items-center justify-center text-grey-six"
+            >
+              <p class="text-sm">2</p>
+            </div>
+            <p class="text-sm text-grey-four hidden xl:block">Choose a Car</p>
+          </a>
+
+          <!-- Connector Line -->
+          <div class="h-0.5 bg-grey-seven flex-1 mx-2"></div>
+
+          <!-- Step 3 -->
+          <a
+            href="#"
+            class="flex flex-row items-center gap-x-1.5 cursor-pointer"
+            data-step="3"
+          >
+            <div
+              class="rounded-full border border-grey-six h-6 w-6 flex items-center justify-center text-grey-six"
+            >
+              <p class="text-sm">3</p>
+            </div>
+            <p class="text-sm text-grey-four hidden xl:block">
+              Select Customer
+            </p>
+          </a>
+
+          <!-- Connector Line -->
+          <div class="h-0.5 bg-grey-seven flex-1 mx-2"></div>
+
+          <!-- Step 4 -->
+          <a
+            href="#"
+            class="flex flex-row items-center gap-x-1.5 cursor-pointer"
+            data-step="4"
+          >
+            <div
+              class="rounded-full border border-grey-six h-6 w-6 flex items-center justify-center text-grey-six"
+            >
+              <p class="text-sm">4</p>
+            </div>
+            <p class="text-sm text-grey-four hidden xl:block">Generate PI</p>
+          </a>
+
+          <!-- Connector Line -->
+          <div class="h-0.5 bg-grey-seven flex-1 mx-2"></div>
+
+          <!-- Step 5 -->
+          <a
+            href="#"
+            class="flex flex-row items-center gap-x-1.5 cursor-pointer"
+            data-step="5"
+          >
+            <div
+              class="rounded-full border border-grey-six h-6 w-6 flex items-center justify-center text-grey-six"
+            >
+              <p class="text-sm">5</p>
+            </div>
+            <p class="text-sm text-grey-four hidden xl:block">Confirm PI</p>
+          </a>
+        </div>
+      </div>
+      <div class="w-2/3 xl:w-1/3 flex gap-x-4 justify-end">
+        <a
+          href="#"
+          class="bg-grey-seven rounded-[5px] px-6 py-2 group text-grey-three"
+        >
+          <button class="cursor-pointer">Back</button>
+        </a>
+
+        <a
+          href="#"
+          class="bg-primary-color px-6 py-2 group rounded-[5px] text-white"
+        >
+          <button class="cursor-pointer">Search Cars</button>
+        </a>
+      </div>
+    </footer>
+
+    <!-- Footer Ends here -->
   </body>
 </html>
