added: new page

--- a/index.html
+++ b/index.html
@@ -1102,7 +1102,7 @@
           <div class="h-0.5 bg-grey-seven flex-1 mx-2"></div>
           <!-- Step 2 -->
           <a
-            href="#"
+            href="./choosecar.html"
             class="flex flex-row items-center gap-x-1.5 cursor-pointer"
             data-step="2"
           >
