added: navbar and footer in the choose car page

--- a/choosecar.html
+++ b/choosecar.html
@@ -137,6 +137,7 @@
     </nav>
     <!-- Navbar Ends here -->
 
+
     <!-- Footer Starts here -->
     <footer
       class="fixed w-full bottom-0 z-20 bg-white py-3 px-4 flex justify-between items-center"
@@ -245,5 +246,6 @@
     </footer>
 
     <!-- Footer Ends here -->
+    <script src="src/tableSelect.js"></script>
   </body>
 </html>
