--- a/choosecar.html
+++ b/choosecar.html
@@ -137,6 +137,433 @@
     </nav>
     <!-- Navbar Ends here -->
 
+    <!-- Content Section Starts Here -->
+    <div class="bg-grey-eight px-4 py-2 h-screen">
+      <!-- Import your car starts -->
+      <div class="flex justify-between">
+        <div>
+          <p class="text-[24px] text-grey-two font-bold">Import Your Car</p>
+          <p class="text-base text-grey-two font-normal">
+            Fast. Reliable. Hassle-Free Vehicle Shipping.
+          </p>
+        </div>
+        <div
+          class="bg-[#1735591a] border-2 rounded flex items-center px-3 border-primary-color"
+        >
+          <p class="font-extrabold text-primary-color text-xl">
+            Total Result: 350
+          </p>
+        </div>
+      </div>
+      <!-- Import your car end -->
+      <div class="bg-white border-grey-seven border px-4 py-2 rounded mt-3">
+        <div class="flex justify-between">
+          <!-- Search field starts-->
+          <div>
+            <input
+              type="search"
+              name="search"
+              class="border pl-3 py-1.5 text-sm outline-none focus:border-primary-color focus:outline-primary-color text-grey-three border-[#d9d9d9] rounded"
+              placeholder="Search"
+            />
+          </div>
+
+          <!-- Search field ends here -->
+
+          <!-- filters start here -->
+
+          <div class="flex gap-x-2">
+            <div class="relative mt-1 w-44">
+              <select
+                name="searchMake"
+                class="appearance-none text-sm text-grey-four w-full border border-grey-six py-1.5 pl-2 rounded cursor-pointer focus:border-grey-six focus:outline-none"
+              >
+                <option value="" class="text-grey-six text-sm">
+                  20 Rows Displayed
+                </option>
+                <option value="P">Pakistan</option>
+              </select>
+
+              <div
+                class="pointer-events-none absolute inset-y-0 m-0 p-0 right-3 flex items-center"
+              >
+                <svg
+                  width="8"
+                  height="8"
+                  viewBox="0 0 11 9"
+                  fill="none"
+                  xmlns="http://www.w3.org/2000/svg"
+                >
+                  <path
+                    d="M10.1646 0.5H0.835417C0.555599 0.5 0.399355 0.892476 0.572644 1.16042L5.23723 8.34575C5.37074 8.55142 5.62784 8.55142 5.76277 8.34575L10.4274 1.16042C10.6006 0.892476 10.4444 0.5 10.1646 0.5Z"
+                    fill="#999999"
+                  />
+                </svg>
+              </div>
+            </div>
+
+            <!-- Sort By Filter -->
+            <div class="relative mt-1 w-44">
+              <select
+                name="searchMake"
+                class="appearance-none text-sm text-grey-four w-full border border-grey-six py-1.5 pl-2 rounded cursor-pointer focus:border-grey-six focus:outline-none"
+              >
+                <option value="" class="text-grey-six text-sm">Sort By</option>
+                <option value="P">Pakistan</option>
+              </select>
+
+              <div
+                class="pointer-events-none absolute inset-y-0 m-0 p-0 right-3 flex items-center"
+              >
+                <svg
+                  width="8"
+                  height="8"
+                  viewBox="0 0 11 9"
+                  fill="none"
+                  xmlns="http://www.w3.org/2000/svg"
+                >
+                  <path
+                    d="M10.1646 0.5H0.835417C0.555599 0.5 0.399355 0.892476 0.572644 1.16042L5.23723 8.34575C5.37074 8.55142 5.62784 8.55142 5.76277 8.34575L10.4274 1.16042C10.6006 0.892476 10.4444 0.5 10.1646 0.5Z"
+                    fill="#999999"
+                  />
+                </svg>
+              </div>
+            </div>
+          </div>
+          <!-- filters ends here -->
+        </div>
+
+        <!-- Table of Cars Starts here -->
+        <div class="overflow-x-auto w-full mt-3">
+          <table class="min-w-full divide-y divide-gray-200">
+            <thead class="bg-gray-50">
+              <tr>
+                <!-- 1: Select All Checkbox -->
+                <th
+                  class="px-4 py-3 text-left text-xs font-medium text-[#262626] uppercase tracking-wider"
+                >
+                  <label class="custom-checkbox">
+                    <input
+                      id="select-all"
+                      type="checkbox"
+                      class="form-checkbox checkbox h-4 w-4 text-primary-color transition duration-150 ease-in-out"
+                    />
+                    <span class="checkmark"></span>
+                  </label>
+                </th>
+                <!-- 2: Car Image -->
+                <th
+                  class="px-4 py-3 text-left text-xs font-medium text-[#262626] uppercase tracking-wider"
+                >
+                  Car Image
+                </th>
+                <!-- 3: Reference No. + Make/Model/Code -->
+                <th
+                  class="px-4 py-3 text-left text-xs font-medium text-[#262626] uppercase tracking-wider"
+                >
+                  Reference No.
+                </th>
+                <!-- 4-12: Placeholders -->
+                <th
+                  class="py-3 text-left text-xs font-medium text-[#262626] uppercase tracking-wider"
+                >
+                  Make <br />
+                  Model
+                  <br />
+                  Model Code
+                </th>
+                <th
+                  class="px-4 py-3 text-left text-xs font-medium text-[#262626] uppercase tracking-wider"
+                >
+                  Year <br />
+                  Mileage
+                </th>
+                <th
+                  class="px-4 py-3 text-left text-xs font-medium text-[#262626] uppercase tracking-wider"
+                >
+                  FOB Price
+                </th>
+                <th
+                  class="px-4 py-3 text-left text-xs font-medium text-[#262626] uppercase tracking-wider"
+                >
+                  Notes
+                </th>
+                <th
+                  class="px-4 py-3 text-left text-xs font-medium text-[#262626] uppercase tracking-wider"
+                >
+                  Sale Icons
+                </th>
+                <th
+                  class="px-4 py-3 text-left text-xs font-medium text-[#262626] uppercase tracking-wider"
+                >
+                  Stock Area <br />
+                  Stock Location
+                </th>
+                <th
+                  class="px-4 py-3 text-left text-xs font-medium text-[#262626] uppercase tracking-wider"
+                >
+                  Auction <br />
+                  Grade
+                </th>
+                <th
+                  class="px-4 py-3 text-left text-xs font-medium text-[#262626] uppercase tracking-wider"
+                >
+                  Release <br />
+                  Days
+                </th>
+                <th
+                  class="px-4 py-3 text-left text-xs font-medium text-[#262626] uppercase tracking-wider"
+                >
+                  Actions
+                </th>
+              </tr>
+            </thead>
+            <tbody
+              id="car-table-body"
+              class="bg-white divide-y divide-gray-200"
+            >
+              <!-- Example Row 1 start -->
+              <tr class="transition-colors duration-200">
+                <!-- 1: Row Checkbox -->
+                <td class="px-4 py-2">
+                  <label class="custom-checkbox">
+                    <input
+                      type="checkbox"
+                      class="row-checkbox checkbox form-checkbox h-4 w-4 transition duration-150 ease-in-out"
+                    />
+                    <span class="checkmark"></span>
+                  </label>
+                </td>
+                <!-- 2: Car Image -->
+                <td class="px-4 py-2">
+                  <img
+                    src="assets/SUV.svg"
+                    alt="Car"
+                    class="w-16 h-10 object-contain rounded"
+                  />
+                </td>
+                <!-- 3: Reference No. + Make/Model/Code -->
+                <td class="px-4 py-2">
+                  <div class="text-[#1890ff] font-normal text-[15px]">
+                    <a href="#"> BX289851 </a>
+                  </div>
+                </td>
+                <!-- 4-12: Placeholders -->
+
+                <td>
+                  <div class="text-[13px] flex flex-col">
+                    <span>Toyota</span>
+                    <span>Raize</span>
+                    <span>5BA-A200A (10,924)</span>
+                  </div>
+                </td>
+                <td>
+                  <div class="px-4 py-2 text-[13px] flex flex-col">
+                    <span>2020/11</span>
+                    <span>40,000 km</span>
+                  </div>
+                </td>
+
+                <td>
+                  <div class="px-4 py-2 text-[13px] flex flex-col">
+                    <span>USD</span>
+                    <span class="line-through">10,560</span>
+                    <span class="text-[#15ac40] font-semibold"> 9,390</span>
+                    <span class="text-[#ff0000] font-semibold">Save: 11%</span>
+                  </div>
+                </td>
+
+                <!-- <td class="px-4 py-2">Petrol</td> -->
+                <td>
+                  <div class="px-4 py-2 text-[13px] flex flex-col">
+                    <span>A3キズあり</span>
+                    <span>B3キズ凹みあり</span>
+                  </div>
+                </td>
+
+                <td>
+                  <div class="px-4 py-2 flex flex-col">
+                    <img
+                      src="assets/premierTag.svg"
+                      alt="Sale Icon"
+                      class="w-24 h-6 inline"
+                    />
+                    <img
+                      src="assets/readyTag.svg"
+                      alt="Sale Icon"
+                      class="w-24 h-6 inline"
+                    />
+                  </div>
+                </td>
+                <td>
+                  <div class="px-4 py-2 flex flex-col text-[13px]">
+                    <span> KYUSHU </span>
+                    <span>Kanda (Kandakoun) </span>
+                  </div>
+                </td>
+                <td class="px-4 py-2 text-[13px]">
+                  <span>3.5</span>
+                </td>
+                <td class="px-4 py-2 text-[13px]">
+                  <span>21</span>
+                </td>
+
+                <td class="px-4 py-2 text-[13px]">
+                  <div class="flex gap-x-1">
+                    <a href="#">
+                      <img
+                        src="./assets/galleryIcon.svg"
+                        alt="galleryIcon"
+                        class="w-5 h-5 cursor-pointer"
+                      />
+                    </a>
+                    <a href="#">
+                      <img
+                        src="./assets/auctionIcon.svg"
+                        alt="auctionIcon"
+                        class="w-5 h-5 cursor-pointer"
+                      />
+                    </a>
+                    <a href="#">
+                      <img
+                        src="./assets/checkSheetIcon.svg"
+                        alt="checkSheetIcon"
+                        class="w-5 h-5 cursor-pointer"
+                      />
+                    </a>
+                  </div>
+                </td>
+              </tr>
+
+              <!-- Example Row 1 end -->
+
+              <!-- Example row 2 starts -->
+
+              <!-- Example Row 1 -->
+              <tr class="transition-colors duration-200">
+                <!-- 1: Row Checkbox -->
+                <td class="px-4 py-2">
+                  <label class="custom-checkbox">
+                    <input
+                      type="checkbox"
+                      class="row-checkbox checkbox form-checkbox h-4 w-4 transition duration-150 ease-in-out"
+                    />
+                    <span class="checkmark"></span>
+                  </label>
+                </td>
+                <!-- 2: Car Image -->
+                <td class="px-4 py-2">
+                  <img
+                    src="assets/SUV.svg"
+                    alt="Car"
+                    class="w-16 h-10 object-contain rounded"
+                  />
+                </td>
+                <!-- 3: Reference No. + Make/Model/Code -->
+                <td class="px-4 py-2">
+                  <div class="text-[#1890ff] font-normal text-[15px]">
+                    <a href="#"> BX289851 </a>
+                  </div>
+                </td>
+                <!-- 4-12: Placeholders -->
+
+                <td>
+                  <div class="text-[13px] flex flex-col">
+                    <span>Toyota</span>
+                    <span>Raize</span>
+                    <span>5BA-A200A (10,924)</span>
+                  </div>
+                </td>
+                <td>
+                  <div class="px-4 py-2 text-[13px] flex flex-col">
+                    <span>2020/11</span>
+                    <span>40,000 km</span>
+                  </div>
+                </td>
+
+                <td>
+                  <div class="px-4 py-2 text-[13px] flex flex-col">
+                    <span>USD</span>
+                    <span class="line-through">10,560</span>
+                    <span class="text-[#15ac40] font-semibold"> 9,390</span>
+                    <span class="text-[#ff0000] font-semibold">Save: 11%</span>
+                  </div>
+                </td>
+
+                <!-- <td class="px-4 py-2">Petrol</td> -->
+                <td>
+                  <div class="px-4 py-2 text-[13px] flex flex-col">
+                    <span>A3キズあり</span>
+                    <span>B3キズ凹みあり</span>
+                  </div>
+                </td>
+
+                <td>
+                  <div class="px-4 py-2 flex flex-col">
+                    <img
+                      src="assets/premierTag.svg"
+                      alt="Sale Icon"
+                      class="w-24 h-6 inline"
+                    />
+                    <img
+                      src="assets/readyTag.svg"
+                      alt="Sale Icon"
+                      class="w-24 h-6 inline"
+                    />
+                  </div>
+                </td>
+                <td>
+                  <div class="px-4 py-2 flex flex-col text-[13px]">
+                    <span> KYUSHU </span>
+                    <span>Kanda (Kandakoun) </span>
+                  </div>
+                </td>
+                <td class="px-4 py-2 text-[13px]">
+                  <span>3.5</span>
+                </td>
+                <td class="px-4 py-2 text-[13px]">
+                  <span>21</span>
+                </td>
+
+                <td class="px-4 py-2 text-[13px]">
+                  <div class="flex gap-x-1">
+                    <a href="#">
+                      <img
+                        src="./assets/galleryIcon.svg"
+                        alt="galleryIcon"
+                        class="w-5 h-5 cursor-pointer"
+                      />
+                    </a>
+                    <a href="#">
+                      <img
+                        src="./assets/auctionIcon.svg"
+                        alt="auctionIcon"
+                        class="w-5 h-5 cursor-pointer"
+                      />
+                    </a>
+                    <a href="#">
+                      <img
+                        src="./assets/checkSheetIcon.svg"
+                        alt="checkSheetIcon"
+                        class="w-5 h-5 cursor-pointer"
+                      />
+                    </a>
+                  </div>
+                </td>
+              </tr>
+
+              <!-- Example row 2 ends -->
+
+              <!-- Add more rows as needed -->
+            </tbody>
+          </table>
+        </div>
+
+        <!-- Table of cars ends here -->
+      </div>
+    </div>
+
+    <!-- Content Section Ends Here -->
 
     <!-- Footer Starts here -->
     <footer
