updated: choose car footer

--- a/choosecar.html
+++ b/choosecar.html
@@ -168,13 +168,13 @@
             />
 
             <button
-              class="bg-[#65b211] px-3 py-1.5 outline-none text-white rounded text-sm cursor-pointer border border-[#65b211] hover:bg-transparent hover:text-[#65b211] transition-all duration-300"
+              class="bg-green-color px-3 py-1.5 outline-none text-white rounded text-sm cursor-pointer border border-green-color hover:bg-transparent hover:text-green-color transition-all duration-300"
             >
               Download Stock List
             </button>
 
             <button
-              class="bg-[#1890ff] px-3 py-1.5 outline-none text-white rounded text-sm cursor-pointer border border-[#1890ff] hover:bg-transparent hover:text-[#1890ff] transition-all duration-300"
+              class="bg-blue-color px-3 py-1.5 outline-none text-white rounded text-sm cursor-pointer border border-blue-color hover:bg-transparent hover:text-blue-color transition-all duration-300"
             >
               Copy Links
             </button>
@@ -608,7 +608,7 @@
             data-step="2"
           >
             <div
-              class="rounded-full border border-grey-six h-6 w-6 flex items-center justify-center text-grey-six"
+              class="rounded-full bg-primary-color border border-grey-six h-6 w-6 flex items-center justify-center text-grey-six"
             >
               <p class="text-sm">2</p>
             </div>
@@ -671,7 +671,7 @@
       </div>
       <div class="w-2/3 xl:w-1/3 flex gap-x-4 justify-end">
         <a
-          href="#"
+          href="./index.html"
           class="bg-grey-seven rounded-[5px] px-6 py-2 group text-grey-three"
         >
           <button class="cursor-pointer">Back</button>
@@ -679,9 +679,16 @@
 
         <a
           href="#"
+          class="bg-green-color px-6 py-2 group rounded-[5px] text-white"
+        >
+          <button class="cursor-pointer">Create Quote</button>
+        </a>
+
+        <a
+          href="#"
           class="bg-primary-color px-6 py-2 group rounded-[5px] text-white"
         >
-          <button class="cursor-pointer">Search Cars</button>
+          <button class="cursor-pointer">Select Customer</button>
         </a>
       </div>
     </footer>
