--- a/choosecar.html
+++ b/choosecar.html
@@ -620,7 +620,7 @@
 
           <!-- Step 3 -->
           <a
-            href="#"
+            href="./selectcustomer.html"
             class="flex flex-row items-center gap-x-1.5 cursor-pointer"
             data-step="3"
           >
