updated: Placeholder names

--- a/index.html
+++ b/index.html
@@ -259,9 +259,7 @@
                     name="searchMake"
                     class="appearance-none text-sm text-grey-four w-full border border-grey-six py-1 px-4 rounded cursor-pointer focus:border-grey-six focus:outline-none"
                   >
-                    <option value="" class="text-grey-six text-sm">
-                      Select Year
-                    </option>
+                    <option value="" class="text-grey-six text-sm">1970</option>
                     <option value="P">Pakistan</option>
                   </select>
 
@@ -294,9 +292,7 @@
                     name="searchMake"
                     class="appearance-none text-sm text-grey-four w-full border border-grey-six py-1 px-4 rounded cursor-pointer focus:border-grey-six focus:outline-none"
                   >
-                    <option value="" class="text-grey-six text-sm">
-                      Select Year
-                    </option>
+                    <option value="" class="text-grey-six text-sm">2025</option>
                     <option value="P">Pakistan</option>
                   </select>
 
@@ -544,7 +540,7 @@
                   class="appearance-none text-sm text-grey-four w-full border border-grey-six py-1 px-4 rounded cursor-pointer focus:border-grey-six focus:outline-none"
                 >
                   <option value="" class="text-grey-six text-sm">
-                    Select Make
+                    Select Interior Color
                   </option>
                   <option value="P">Pakistan</option>
                 </select>
@@ -575,7 +571,7 @@
                   class="appearance-none text-sm text-grey-four w-full border border-grey-six py-1 px-4 rounded cursor-pointer focus:border-grey-six focus:outline-none"
                 >
                   <option value="" class="text-grey-six text-sm">
-                    Select Make
+                    Select Exterior Color
                   </option>
                   <option value="P">Pakistan</option>
                 </select>
@@ -797,12 +793,12 @@
           </div>
 
           <!-- Stock Location -->
-          <label for="searchStockCountry" class="text-sm mt-3"
-            >Stock Location</label
+          <label for="searchStockLocation" class="text-sm mt-3"
+            >Stock Area</label
           >
           <div class="relative w-full mt-1">
             <select
-              name="searchStockCountry"
+              name="searchStockLocation"
               class="appearance-none text-sm text-grey-four w-full border border-grey-six py-1 px-4 rounded cursor-pointer focus:border-grey-six focus:outline-none"
             >
               <option value="" class="text-grey-six text-sm">
@@ -829,16 +825,16 @@
             </div>
           </div>
 
-          <label for="searchStockCountry" class="text-sm mt-3"
-            >Stock Location</label
+          <label for="searchStockArea" class="text-sm mt-3"
+            >Stock Area</label
           >
           <div class="relative w-full mt-1">
             <select
-              name="searchStockCountry"
+              name="searchStockArea"
               class="appearance-none text-sm text-grey-four w-full border border-grey-six py-1 px-4 rounded cursor-pointer focus:border-grey-six focus:outline-none"
             >
               <option value="" class="text-grey-six text-sm">
-                Select Stock Location
+                Select Stock Area
               </option>
               <option value="P">Pakistan</option>
             </select>
