--- a/selectcustomer.html
+++ b/selectcustomer.html
@@ -355,15 +355,172 @@
 
           <!-- Customer Summary Section End -->
           <form class="mt-3">
-            <div class="grid grid-cols-3">
+            <div class="grid grid-cols-3 items-center gap-x-3">
               <!-- customer name starts -->
-              <div>
+              <div class="w-full">
                 <label for="cstmrName" class="text-sm text-grey-two"
                   >Customer Name <span class="text-red-700">*</span>
                 </label>
-                <input type="text" placeholder="Enter Customer Name" class="border border-grey-six" />
+                <input
+                  type="text"
+                  placeholder="Enter Customer Name"
+                  class="border border-grey-six w-full outline-none rounded px-2 placeholder:text-grey-six text-sm py-1.5 text-grey-three"
+                />
               </div>
               <!-- Customer name ends here -->
+
+              <!-- Entity Types Starts -->
+              <div>
+                <p class="text-sm text-grey-two">Entity Type</p>
+                <div class="flex space-x-4 items-center py-1.5">
+                  <div class="flex gap-x-2">
+                    <input
+                      type="radio"
+                      id="cstrunset"
+                      value="unset"
+                      name="entity"
+                      class="checked:accent-primary-color"
+                    />
+                    <label for="cstrunset" class="gap-x-1 text-sm">
+                      Unset
+                    </label>
+                  </div>
+                  <div class="flex gap-x-2">
+                    <input
+                      type="radio"
+                      id="cstrindividual"
+                      value="individual"
+                      name="entity"
+                      class="checked:accent-primary-color"
+                    />
+                    <label for="cstrindividual" class="gap-x-1 text-sm">
+                      Individual
+                    </label>
+                  </div>
+                  <div class="flex gap-x-2">
+                    <input
+                      type="radio"
+                      id="cstrcorporation"
+                      value="corporation"
+                      name="entity"
+                      class="checked:accent-primary-color"
+                    />
+                    <label for="cstrcorporation" class="gap-x-1 text-sm">
+                      Corporation
+                    </label>
+                  </div>
+                </div>
+              </div>
+              <!-- Entity Types Ends Here -->
+
+              <!-- Date of Birth starts-->
+              <div>
+                <p class="text-sm text-grey-two">Date of Birth</p>
+
+                <div class="flex gap-x-2">
+                  <!-- Year Starts -->
+                  <div class="w-full">
+                    <div class="relative mt-1">
+                      <select
+                        name="searchMake"
+                        class="appearance-none text-sm text-grey-four w-full border border-grey-six py-1 px-4 rounded cursor-pointer focus:border-grey-six focus:outline-none"
+                      >
+                        <option value="" class="text-grey-six text-sm">
+                          Year
+                        </option>
+                        <option value="P">Pakistan</option>
+                      </select>
+
+                      <div
+                        class="pointer-events-none absolute inset-y-0 m-0 p-0 right-3 flex items-center"
+                      >
+                        <svg
+                          width="11"
+                          height="8"
+                          viewBox="0 0 11 9"
+                          fill="none"
+                          xmlns="http://www.w3.org/2000/svg"
+                        >
+                          <path
+                            d="M10.1646 0.5H0.835417C0.555599 0.5 0.399355 0.892476 0.572644 1.16042L5.23723 8.34575C5.37074 8.55142 5.62784 8.55142 5.76277 8.34575L10.4274 1.16042C10.6006 0.892476 10.4444 0.5 10.1646 0.5Z"
+                            fill="#999999"
+                          />
+                        </svg>
+                      </div>
+                    </div>
+                  </div>
+                  <!-- Year Ends -->
+
+                  <!-- Month Starts -->
+                  <div class="w-full">
+                    <div class="relative mt-1">
+                      <select
+                        name="searchMake"
+                        class="appearance-none text-sm text-grey-four w-full border border-grey-six py-1 px-4 rounded cursor-pointer focus:border-grey-six focus:outline-none"
+                      >
+                        <option value="" class="text-grey-six text-sm">
+                          Month
+                        </option>
+                        <option value="P">Pakistan</option>
+                      </select>
+
+                      <div
+                        class="pointer-events-none absolute inset-y-0 m-0 p-0 right-3 flex items-center"
+                      >
+                        <svg
+                          width="11"
+                          height="8"
+                          viewBox="0 0 11 9"
+                          fill="none"
+                          xmlns="http://www.w3.org/2000/svg"
+                        >
+                          <path
+                            d="M10.1646 0.5H0.835417C0.555599 0.5 0.399355 0.892476 0.572644 1.16042L5.23723 8.34575C5.37074 8.55142 5.62784 8.55142 5.76277 8.34575L10.4274 1.16042C10.6006 0.892476 10.4444 0.5 10.1646 0.5Z"
+                            fill="#999999"
+                          />
+                        </svg>
+                      </div>
+                    </div>
+                  </div>
+                  <!-- Month Ends -->
+
+                  <!-- Date Starts -->
+                  <div class="w-full">
+                    <div class="relative mt-1">
+                      <select
+                        name="searchMake"
+                        class="appearance-none text-sm text-grey-four w-full border border-grey-six py-1 px-4 rounded cursor-pointer focus:border-grey-six focus:outline-none"
+                      >
+                        <option value="" class="text-grey-six text-sm">
+                          Date
+                        </option>
+                        <option value="P">Pakistan</option>
+                      </select>
+
+                      <div
+                        class="pointer-events-none absolute inset-y-0 m-0 p-0 right-3 flex items-center"
+                      >
+                        <svg
+                          width="11"
+                          height="8"
+                          viewBox="0 0 11 9"
+                          fill="none"
+                          xmlns="http://www.w3.org/2000/svg"
+                        >
+                          <path
+                            d="M10.1646 0.5H0.835417C0.555599 0.5 0.399355 0.892476 0.572644 1.16042L5.23723 8.34575C5.37074 8.55142 5.62784 8.55142 5.76277 8.34575L10.4274 1.16042C10.6006 0.892476 10.4444 0.5 10.1646 0.5Z"
+                            fill="#999999"
+                          />
+                        </svg>
+                      </div>
+                    </div>
+                  </div>
+                  <!-- Date Ends -->
+                </div>
+
+                <div class="flex gap-x-2"></div>
+              </div>
+              <!-- Date of Birth Ends -->
             </div>
             <div></div>
           </form>
